# MTSC

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  mtsc.1  pre.ts  strc.ts  test.ts  test.tshtml  test.tsx  updatets.bat
data/: test.txt
data/resource/: data.txt
dependency-licenses/: LICENSE-APACHE-2.0  LICENSE-BSD  LICENSE-MIT
src/: adjustments.ts  compilers.rs  ffi.h  ffi.rs  lib.rs  main.rs  rcdom.rs  util.rs  wave.cpp  wave.h  wave.hpp  wave.rs
src/features/: common.rs  compile.rs  html.rs  minify.rs  mod.rs  transpile.rs
src/features/minify/: mod.rs
src/features/preprocess/: mod.rs  wave.hpp  wave.rs
src/features/preprocess/patch/boost/wave/util/: cpp_iterator.hpp
src/features/transpile/: mod.rs
src/patch/boost/wave/util/: cpp_macromap.hpp  cpp_macromap_predef.hpp  interpret_pragma.hpp
test_files/: test_include copy.ts  test_include.ts
