[package]
name = "mtsc"
version = "5.3.3"
edition = "2018"
authors = ["Trin Wasinger"] # <you@example.com>
license = "MIT"

[dependencies]
v8 = "0.34.0"
clap = "2.33.3"
html5ever = "0.26.0"
panic-message = "0.3.0"
backtrace = "0.3.64"
cxx = "1.0"

[build-dependencies]
cc = "1.0.82"
reqwest = "0.11.18"
tokio = { version = "1.20.4", features = ["full"] }
cxx-build = "1.0"