[package]
name = "mtsc"
version = "5.4.2"
edition = "2018"
authors = ["Trin Wasinger"] # <you@example.com>
license = "MIT"

[dependencies]
clap = "2.33.3"
panic-message = "0.3.0"
backtrace = "0.3.64"

v8 = { version = "0.92.0", optional = true }
html5ever = { version = "0.26.0", optional = true }
cxx = { version = "1.0", optional = true }
cfg-if="1.0.0"
fancy-default = "0.1.0"

[build-dependencies]
cc = "1.0.82"
reqwest = "0.11.18"
tokio = { version = "1.20.4", features = ["full"] }
cxx-build = "1.0"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = "debuginfo"

[features]
default=["preprocess","transpile","minify"]
# default=["transpile","minify","preprocess","html"]
full=["transpile","compile","preprocess","minify","html"]

common=["dep:v8"]

compile=["common"]
transpile=["common"]
minify=["common"]
preprocess=["dep:cxx"]
html=["dep:html5ever"]
